--- a/index.css
+++ b/index.css
@@ -1,6 +1,20 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+button{
+    border: 2px solid yellowgreen;
+    padding: 10px;
+    margin:center;
+}
+
+
 /*this section determines how row contained inside the main div will appear*/
 .container{
     display: flex;
+    flex: 1;
     flex-direction: column;
     justify-content: space-between;
     gap: 5px;
@@ -23,3 +37,4 @@
 .colel:hover{
     background-color: red;
 }
+
